# skill-se-kit

./: .gitignore  README.md  README.zh-CN.md  SKILL.md  SKILL.zh-CN.md  pyproject.toml  setup.py
.github/workflows/: release.yml
docs/: architecture.md  autonomous-evolution.md  compatibility-issues.md  design-philosophy.md  integration-guide.md  integration-modes.md  migration-from-runtime.md  mvp-plan.md  workspace-reference.md
examples/: autonomous_code_repair.py  autonomous_native_skill.py  easy_mode_skill.py  example-audit-entry.json  example-experience.json  example-skill-bank.json  governed-walkthrough.md  governed.manifest.json  minimal_skill_integration.py  standalone-walkthrough.md  standalone.manifest.json
packaging/: pyinstaller.spec
protocol/: protocol-ref.md
schemas/: audit-entry.schema.json  experience-item.schema.json  feedback.schema.json  run-result.schema.json  skill-bank.schema.json  skill-contract.schema.json  snapshot.schema.json
src/skill_se_kit/: __init__.py  __main__.py  cli.py  common.py  serve.py
src/skill_se_kit/audit/: __init__.py  logger.py
src/skill_se_kit/evaluation/: __init__.py  local_evaluator.py  (+1 more)
tests/: __init__.py  test_support.py
tests/contract/: test_protocol_contracts.py
tests/integration/: test_auto_init_cli.py  test_autonomous_evolution.py  test_easy_mode.py  test_runtime_flow.py  test_serve.py
tests/unit/: test_experience_store.py  test_intelligence_backend.py  test_multilingual_retrieval.py  test_platform_artifacts.py
tools/: README.md  validate.py
workspace-template/: README.md  manifest.json
(+34 files in other folders)
