[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-se-kit"
version = "0.2.0"
description = "Protocol-compatible Skill-SE-Kit runtime for self-evolving skills"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "jsonschema>=4.23,<5",
]

[project.scripts]
skill-se-kit = "skill_se_kit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
